--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <title>Hi, this is Andrew (Dongin) Nam!</title>
+  </head>
+  <body>
+      <p>
+      This website is for IS445 Lab4.1 <strong>body</strong>
+      tag will appear on the page, just like this <strong>p</strong>
+      tag and its contents.
+      </p>
+  </body>
+</html>
