--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello this is Andrew Dongin Nam
+<!doctype html>
+<html>
+  <head>
+    <title>This is the title of the webpage!</title>
+  </head>
+  <body>
+      <p>
+      This is Andrew Dongin Nam's Webpage
+      </p>
+  </body>
+</html>
