--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
       <p>
-      This is Andrew Dongin Nam's Webpage
+      This is an example paragraph. Anything in the <strong>body</strong>
+      tag will appear on the page, just like this <strong>p</strong>
+      tag and its contents.
       </p>
   </body>
 </html>
