--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
-<!doctype html>
-<html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-      <p>
-      This is an example paragraph. Anything in the <strong>body</strong>
-      tag will appear on the page, just like this <strong>p</strong>
-      tag and its contents.
-      </p>
-  </body>
-</html>
+<title>This is the title of the webpage!</title>
+  
+  
+    <!-- this is just a comment for IS445 Fall 2024 BCU/BCG -->
+    <p>This is an example paragraph for Fa2024-ID46928. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
